stacks_eks/21_k8s_dashboard/k8s_dashboard_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${NAME}
  namespace: ${NAMESPACE}
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/security-groups: ${SG_IDS}
    alb.ingress.kubernetes.io/group.name: ${NAME}
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: kubernetes-dashboard
      port:
        number: 9090
